feat: Enhance RootMain functionality with advanced alert parameters and Xposed integration
- Updated RootMain.java to support additional parameters for alert configuration including serial number, service category, priority, geo scope, DCS, slot index, and language.
- Improved error handling and logging for alert creation.
- Added XposedInit.kt to hook into Google Play Services and trigger alerts with custom parameters.
- Introduced new strings and arrays for advanced options and Google Play Services integration in strings.xml and arrays.xml.
- Updated gradle dependencies to include Xposed API and configured repositories for Xposed.